--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+/* App.css */
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f3f3f3;
   text-align: center;
+  padding: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: #333;
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  margin: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button:hover {
+  background-color: #ff7b7b;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.YesButton {
+  background-color: #ff9a9a;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NoButton {
+  background-color: #9b59b6;
+  color: white;
+}
+
+.YesButton:hover {
+  background-color: #ff6161;
+}
+
+.NoButton:hover {
+  background-color: #732d91;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px; /* Abstand zwischen den Buttons und dem GIF */
+}
+
+.gif-container {
+  margin-top: 20px;
 }
