Web app is functional

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* App.css */
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f3f3f3;
+  background-color: #fde2ff;
   text-align: center;
   padding: 50px;
 }
